<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:text="@string/profileName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileStatus"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="264dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="452dp"
        android:text="@string/profileLogOutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="344dp"
        android:text="@string/profileSaveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="264dp"
        android:text="@string/profileStatus"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profileLastName"
        android:layout_width="192dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/profileEditable"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="344dp"
        android:text="@string/profileEditButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="192dp"
        android:text="@string/profileEmail"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profileName"
        android:layout_width="196dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="118dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="116dp"
        android:text="@string/profileLastName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>