<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="98dp"
        android:layout_height="21dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/typeString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="132dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="132dp"
        android:text="@string/tagString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="220dp"
        android:text="@string/categoryString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/provinceSearch"
        android:layout_width="128dp"
        android:layout_height="39dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/provinceString"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/rateSearch"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="82dp"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:isIndicator="false"
        android:stepSize="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/searchList"
        android:layout_width="352dp"
        android:layout_height="340dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSearch"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/nameSearch"
        android:layout_width="198dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeString"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="49dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/icon_search"
        app:layout_constraintStart_toEndOf="@+id/nameSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rateNumber"
        android:layout_width="34dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="0.0"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/rateSearch"
        app:layout_constraintTop_toTopOf="parent" />


    <HorizontalScrollView
        android:layout_width="387dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tagGroup"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="180dp">


        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="164dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>