<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout14"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchMapFragment" >

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView3"
        android:layout_width="399dp"
        android:layout_height="286dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <EditText
        android:id="@+id/distanceMap"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView3" />

    <Button
        android:id="@+id/btnSearchMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="12dp"
        android:text="@string/searchMap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="113dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/distance"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView3" />

    <TextView
        android:id="@+id/textResultMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/searchMapResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listResultMap"
        android:layout_width="382dp"
        android:layout_height="195dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMap"
        app:layout_constraintVertical_bias="0.269" />

    <Spinner
        android:id="@+id/spinnerMap"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView3" />
</androidx.constraintlayout.widget.ConstraintLayout>