<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout18"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".newHomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="324dp"
        app:cardBackgroundColor="#16A31B"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/gradient"
            android:gravity="center"


            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mapCardNew"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/map1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="348dp"
        android:text="@string/menu_map"
        android:textColor="#4CAF50"

        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/cardView1"
        app:layout_constraintTop_toTopOf="parent" />





    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="439dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="#16A31B">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/gradient">
            <ImageView
                android:id="@+id/listCardNew"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/list1" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="468dp"
        android:text="@string/menu_list"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="544dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="#16A31B">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/gradient">
            <ImageView
                android:id="@+id/locationCardNew"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/location1" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="568dp"
        android:text="@string/menu_location"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="625dp">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:elevation="20dp"
            app:diagonal_angle="30"
            app:diagonal_direction="right"
            app:diagonal_position="bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="0"
                app:iss_delay="0"
                app:iss_period="1000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.denzcoskun.imageslider.ImageSlider>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="245dp"
                android:layout_height="245dp"
                android:src="@drawable/icono4" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_search"
                android:layout_marginTop="330dp"
                android:layout_marginLeft="330dp"/>

        </com.github.florent37.diagonallayout.DiagonalLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>